test_programs/compile_failure/static_assert_dynamic_message/src/main.nr
use std::static_assert;

fn main(x: Field) {
    let string = f"Assertion failed: {x}";
    static_assert(true, string);
}
